changed composer name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "leadhub/leadhub-landing-pages",
+    "name": "leadhub/landing-pages",
     "description": "Landing page plugin tools for LEADHUB developers.",
     "type": "wordpress-plugin",
     "license": "GPL",
